k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hms-ingress
  namespace: hms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /v1/patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 3001
          - path: /v1/doctors
            pathType: Prefix
            backend:
              service:
                name: doctor-service
                port:
                  number: 3002
          - path: /v1/appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 3003
          - path: /v1/bills
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 3004
          - path: /v1/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3005
          - path: /v1/prescriptions
            pathType: Prefix
            backend:
              service:
                name: prescription-service
                port:
                  number: 3006
          - path: /v1/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3007
